[package]
name = "rustices"
version = "0.1.0"
authors = ["Daniel <dob9601@gmail.com>"]
edition = "2018"

description = "An implementation of matrices"
license = "MIT"

keywords = ["matrices", "matrix", "linear algebra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
num = "0.3.1"
